[FIX] website_sale: fix display of content in cart popover
This error is caused by [1], setting the line width to 90%
causes the content of the product title to overlap the product
image due to insufficient width.

Steps to reproduce:
- Add some products to cart.
- Hover the cart icon.

[1]: https://github.com/odoo/odoo/commit/6c883840dba1fd0eaada6d916f13e1d062e002c5

closes odoo/odoo#91613

--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -422,11 +422,11 @@ ul.wizard {
     max-width: 500px;
     min-width: 250px;
     max-height: 90%;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 
     .cart_line {
         border-bottom: 1px #EEE solid;
-        max-width: 90%;
     }
 }
 
